.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:54:56 **** Incremental Build of configuration Debug for project T.P 3 A ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:28:23: error: 'NOMBRE_LEN' undeclared (first use in this function)
     char bufferNombre[NOMBRE_LEN];
                       ^~~~~~~~~~
..\main.c:28:23: note: each undeclared identifier is reported only once for each function it appears in
..\main.c:41:14: warning: implicit declaration of function 'utn_getNumeroFlotante' [-Wimplicit-function-declaration]
              utn_getNumeroFlotante(&bufferAltura,"\naltura","\nAltura incorrecta")
              ^~~~~~~~~~~~~~~~~~~~~
..\main.c:42:14: error: expected ';' before 'if'
              if(alumno_agregarAlumno(arrayPunterosAlumno,QTY_ALUMNOS,"a borrar",1.85,proximoId)>=0)
              ^~
..\main.c:28:10: warning: unused variable 'bufferNombre' [-Wunused-variable]
     char bufferNombre[NOMBRE_LEN];
          ^~~~~~~~~~~~
..\main.c:26:9: warning: unused variable 'proximoId' [-Wunused-variable]
     int proximoId = 0;
         ^~~~~~~~~
